--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -29,4 +29,19 @@
 
 	</form>
 
+	<ion-list>
+		<ion-item-sliding *ngFor="let item of shoppingList; let i = index">  
+			<ion-item >
+				<h3>{{item.name}}</h3>
+				<p>Quantity: {{item.quantity}}</p>
+			</ion-item>
+			<ion-item-options side="right">
+				<button ion-button icon-only (click)="deleteItem(i)">
+					<ion-icon name="trash"></ion-icon>
+				</button>
+			</ion-item-options>
+		</ion-item-sliding>
+		
+	</ion-list>
+	
 </ion-content>
