fix up ingredient model (turned it into class), do some other cleanup

--- a/src/pages/create-recipe/create-recipe.html
+++ b/src/pages/create-recipe/create-recipe.html
@@ -1,35 +1,40 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>New Recipe</ion-title>
+    <ion-title>{{mode}} Recipe</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-	<ion-list>
+	<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">  
+		<ion-list>
 	
-		<ion-item>
-			<ion-label floating>Title</ion-label>
-			<ion-input type="text"></ion-input>
-		</ion-item>
+			<ion-item>
+				<ion-label floating>Title</ion-label>
+				<ion-input type="text" formControlName="title"></ion-input>
+			</ion-item>
+			
+			<ion-item>
+				<ion-label floating>Description</ion-label>
+				<ion-textarea formControlName="description"></ion-textarea>
+			</ion-item>
+			
+			<ion-item>
+				<ion-label floating>Difficulty</ion-label>
+				<ion-select formControlName="difficulty">
+					<ion-option *ngFor="let option of selectOptions" [value]="option">{{option}}</ion-option>    
+				</ion-select>  
+			</ion-item>
+			
+		</ion-list>
 		
-		<ion-item>
-			<ion-label floating>Description</ion-label>
-			<ion-input type="text"></ion-input>
-		</ion-item>
+		<button ion-button block clear (click)="onManageIngredients()">Manage Ingredients</button>
 		
-		<ion-item>
-			<ion-label floating>Difficulty</ion-label>
-			<ion-select [(ngModel)]="difficulty">
-				<ion-option value="easy" selected="true">Easy</ion-option>    
-				<ion-option value="moderate">Moderate</ion-option>
-				<ion-option value="difficult">Difficult</ion-option>
-			</ion-select>  
-		</ion-item>
-		
-	</ion-list>
-	<button ion-button block clear (click)="addIngredients()">Manage Ingredients</button>
-	<button ion-button block (click)="addRecipe()">Add Recipe</button>
+		<button ion-button block (click)="addRecipe()">{{mode}} Recipe</button>
+	</form>
+	
+	
+	
 </ion-content>
