--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the Recipes page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
 		<ion-navbar>
 			<ion-title>Recipes</ion-title>
 			<ion-buttons end>
-				<button ion-button icon-only [navPush]="createRecipePage">  
+				<button ion-button icon-only (click)="onNewRecipe()">  
 					<ion-icon name="add"></ion-icon>
 				</button>
 			</ion-buttons>
