--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -36,7 +36,7 @@
 				<p>Quantity: {{item.quantity}}</p>
 			</ion-item>
 			<ion-item-options side="right">
-				<button ion-button icon-only (click)="deleteItem(i)">
+				<button ion-button icon-only (click)="onDeleteItem(i)">
 					<ion-icon name="trash"></ion-icon>
 				</button>
 			</ion-item-options>
