--- a/src/pages/create-recipe/create-recipe.html
+++ b/src/pages/create-recipe/create-recipe.html
@@ -32,6 +32,13 @@
 		
 		<button ion-button block clear (click)="onManageIngredients()">Manage Ingredients</button>
 		
+		<ion-list formArrayName="ingredients" >
+			<ion-item *ngFor="let igControl of recipeForm.get('ingredients').controls; let i = index">
+				<ion-label floating>Name</ion-label>
+				<ion-input type="text" [formControlName]="i"></ion-input>
+			</ion-item>
+		</ion-list>
+		
 		<button ion-button block (click)="addRecipe()">{{mode}} Recipe</button>
 	</form>
 	
