hooked up edit recipe, delete recipe, everything really

--- a/src/pages/recipe-details/recipe-details.html
+++ b/src/pages/recipe-details/recipe-details.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the RecipeDetails page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>recipe-details</ion-title>
+    <ion-title>{{ recipe.title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +10,59 @@
 
 <ion-content padding>
 
+	<ion-grid>
+	
+		<ion-row>
+			<ion-col>
+				<h2 text-center>#{{index + 1}} - {{ recipe.title }}</h2>  
+				<div class="subtitle" text-center>{{ recipe.difficulty }}</div>
+			</ion-col>
+		</ion-row>
+		
+		<ion-row>
+			<ion-col>
+				<p text-center>{{ recipe.description }}</p>
+			</ion-col>
+		</ion-row>
+		
+		<ion-row *ngIf="recipe.ingredients.length">
+			<ion-col>
+				<ion-list>
+					<ion-list-header>
+						Ingredients
+					</ion-list-header>
+					<ion-item *ngFor="let ingredient of recipe.ingredients">
+						<h3>{{ ingredient.name }}</h3>
+						<p>Quantity: {{ ingredient.quantity }}</p>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+		
+		<ion-row>
+			<ion-col>
+				<button ion-button block clear (click)="onAddIngredients()">Add Ingredients to Shopping List</button>
+			</ion-col>
+		</ion-row>
+		
+		<ion-row>
+			<ion-col>
+				<button ion-button block outline (click)="onEditRecipe()">Edit Recipe</button>
+			</ion-col>
+			<ion-col>
+				<button ion-button block outline color="danger" (click)="onDeleteRecipe()">Delete Recipe</button>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 </ion-content>
