--- a/src/pages/create-recipe/create-recipe.html
+++ b/src/pages/create-recipe/create-recipe.html
@@ -8,7 +8,7 @@
 
 
 <ion-content padding>
-	<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">  
+	<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
 		<ion-list>
 	
 			<ion-item>
@@ -39,7 +39,7 @@
 			</ion-item>
 		</ion-list>
 		
-		<button ion-button block (click)="addRecipe()">{{mode}} Recipe</button>
+		<button ion-button block type="submit" [disabled]="!recipeForm.valid" (click)="addRecipe()">{{mode}} Recipe</button>
 	</form>
 	
 	
