--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -1,13 +1,16 @@
 <ion-header>
-
-		<ion-navbar>
-			<ion-title>Recipes</ion-title>
-			<ion-buttons end>
-				<button ion-button icon-only (click)="onNewRecipe()">  
-					<ion-icon name="add"></ion-icon>
-				</button>
-			</ion-buttons>
-		</ion-navbar>
+	
+	<ion-navbar> 
+		<ion-buttons>
+			<button ion-button clear menuToggle><ion-icon name="menu"></ion-icon></button>
+		</ion-buttons>
+		<ion-title>Recipes</ion-title>
+		<ion-buttons end>
+			<button ion-button icon-only (click)="onNewRecipe()">  
+				<ion-icon name="add"></ion-icon>
+			</button>
+		</ion-buttons>
+	</ion-navbar>
 		
 	
 </ion-header>
