--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,9 +1,12 @@
 
 <ion-header>
-
-  <ion-navbar>
+	
+	<ion-navbar>
+		<ion-buttons>
+			<button ion-button clear menuToggle><ion-icon name="menu"></ion-icon></button>
+		</ion-buttons>
     <ion-title>Shopping List</ion-title>  
-  </ion-navbar>
+</ion-navbar> 
 
 </ion-header>
 
