added loading/saving for shopping lists and recipes

--- a/src/pages/recipe-details/recipe-details.html
+++ b/src/pages/recipe-details/recipe-details.html
@@ -25,7 +25,7 @@
 			</ion-col>
 		</ion-row>
 		
-		<ion-row *ngIf="recipe.ingredients.length">
+		<ion-row *ngIf="recipe.ingredients && recipe.ingredients.length">
 			<ion-col>
 				<ion-list>
 					<ion-list-header>
