--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -5,7 +5,10 @@
 		<ion-buttons>
 			<button ion-button clear menuToggle><ion-icon name="menu"></ion-icon></button>
 		</ion-buttons>
-    <ion-title>Shopping List</ion-title>  
+		<ion-title>Shopping List</ion-title>  
+		<ion-buttons end>
+			<button ion-button clear (click)="openOptions($event)"><ion-icon name="more"></ion-icon></button>
+		</ion-buttons>
 </ion-navbar>  
 
 </ion-header>
