--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -40,7 +40,7 @@
 	
 	
 
-	<ion-list *ngIf="shoppingList.length">
+	<ion-list *ngIf="shoppingList && shoppingList.length">
 		<ion-list-header>
 			Shopping List
 		</ion-list-header>
@@ -57,6 +57,6 @@
 		</ion-item-sliding>
 		
 	</ion-list>
-	<p *ngIf="shoppingList.length === 0">Add items to your shopping list using the form above.</p>
+	<p *ngIf="!shoppingList || shoppingList.length === 0">Add items to your shopping list using the form above.</p>
 	
 </ion-content>
